--- a/package.json
+++ b/package.json
@@ -10,36 +10,41 @@
     "astro": "astro",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "packages-check": "npm-check-updates --deep",
+    "packages-update": "npm-check-updates --deep -u"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/sitemap": "^3.4.0",
     "@resvg/resvg-js": "^2.6.2",
-    "@tailwindcss/vite": "^4.0.14",
-    "astro": "^5.5.2",
+    "@tailwindcss/vite": "^4.1.8",
+    "astro": "^5.8.1",
     "dayjs": "^1.11.13",
     "lodash.kebabcase": "^4.1.1",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
-    "satori": "^0.12.1",
-    "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.14"
+    "satori": "^0.13.1",
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
     "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash.kebabcase": "^4.1.9",
-    "@typescript-eslint/parser": "^8.26.1",
-    "eslint": "^9.22.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "eslint": "^9.28.0",
     "eslint-plugin-astro": "^1.3.1",
-    "globals": "^16.0.0",
+    "globals": "^16.2.0",
+    "npm-check-updates": "^18.0.1",
     "pagefind": "^1.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1"
-  }
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.0"
+  },
+  "packageManager": "pnpm@10.11.0"
 }
